# PlanetGen

./: .gitignore  CMakeLists.txt  README.md
core/ccarreon/: camera.cpp  camera.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
core/pl/: camera.cpp  camera.h  circle.cpp  circle.h  cubemap.cpp  cubemap.h  geometry.cpp  geometry.h  lighting.h  mesh.cpp  mesh.h  noise.cpp  noise.h  planet.cpp  planet.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h
programs/planet/: CMakeLists.txt  main.cpp  pl
programs/planet/assets/: boxFragmentShader.frag  boxVertexShader.vert
programs/planet/assets/shaders/: cube.frag  light.frag  noise.frag  noise.vert  noiseVertexShader.vert  space.frag  space.vert  water.frag  water.vert
